<resources>
    <string name="app_name">Likee Likes</string>
    <string name="a">t</string>
    <string name="closes">t</string>
    <string name="ap">ti</string>
    <string name="app">tik</string>
    <string name="app_">tikf</string>
    <string name="app_n">tikfo</string>
    <string name="app_na">tikfol</string>
    <string name="app_nam">tikfoll</string>
    <string name="app_names">tikfollo</string>
    <string name="app_namesz">tikfollow</string>
    <string name="app_namesx">tikfollows</string>
    <string name="text">\@username</string>
    <string name="points">00000</string>
    <string name="textview">Fetching Jokes for you</string>
    <string name="splash">Claim Subscribe and Views</string>
    <string name="continue_as_guest">Continue As a Guest</string>
    <string name="hint">hint</string>
    <string name="enter_your_Likee_username">Enter your Channel link</string>
    <string name="type_here">Type here</string>
    <string name="done">Done</string>
    <string name="claim">Claim</string>
    <string name="claim_them_for_free">Claim them for free</string>
    <string name="_1_follow">+1 Subscribe</string>
    <string name="_25_likes">+25 Minute View</string>
    <string name="_20_likes">+20 Minute View</string>
    <string name="_15_likes">+15 Minute View</string>
    <string name="_10_likes">+10 Minute View</string>
    <string name="_5_likes">+5 Minute View</string>
    <string name="claim_bonus">Claim Bonus</string>
    <string name="loading_jokes">Loading Jokes</string>
    <string name="click_to_claim_bonus">Click TO Claim Bonus</string>
    <string name="ha">ha</string>
    <string name="rate_me">Rate me</string>
    <string name="jokes">jokes</string>
    <string name="proof">Proof</string>
</resources>