<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile">

    <ImageView
        android:id="@+id/bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/a"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile" />

    <Button
        android:id="@+id/rate"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:contentDescription="@string/app_names"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bg"
        app:layout_constraintVertical_bias="0.067" />

    <Button
        android:id="@+id/edit"
        android:layout_width="65dp"
        android:layout_height="69dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/app_nam"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.979"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bg"
        app:layout_constraintVertical_bias="0.217" />

    <Button
        android:id="@+id/task"
        android:layout_width="145dp"
        android:layout_height="112dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/ap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bg"
        app:layout_constraintVertical_bias="0.615" />

    <Button
        android:id="@+id/reward"
        android:layout_width="145dp"
        android:layout_height="112dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="236dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/more"
        android:layout_width="145dp"
        android:layout_height="112dp"
        android:layout_marginEnd="220dp"
        android:layout_marginBottom="112dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/app_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/exit"
        android:layout_width="145dp"
        android:layout_height="112dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="112dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/app_n"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/bonus"
        android:layout_width="269dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="16dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/app_na"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:text="@string/text"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.732"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.227" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_namesx"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14"
        app:srcCompat="@drawable/avater" />

</androidx.constraintlayout.widget.ConstraintLayout>